--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "coinstring": "^2.3.0",
+    "dotenv": "^10.0.0",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-wallet": "^1.0.1",
     "web3": "^1.3.6"
