--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: PersonRegistry
-    network: mainnet
+    network: rinkeby
     source:
-      address: "0x41fA13a4CEaE6ECef5cb4bE1ce74a2b68bB5eccB"
+      address: "0xe072208C66B37F4f00fABded75CaFd5F88Fd43dC"
       abi: PersonRegistry
-      startBlock: 985000
+      startBlock: 8742105
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
