--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^10.0.0",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-wallet": "^1.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "web3": "^1.3.6"
   }
 }
